fixed left-aligned footer text

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -56,6 +56,9 @@ footer p:last-child {
   text-align:center;
   margin-bottom: 0;
 }
+footer {
+  text-align: center;
+}
 table {
   table-layout:fixed;
   width:100%;
